  - test filetime add function
* add a more sophisticated day of the month check in date time values
* have API functions return 0 if value is not a valid date and time ?

Date time values:
* add non-with-index functions ?

FAT date and time
* implement individual fat_date and fat_time support ?

HFS date/time
* implement

Deployment
* add macosx files

20130413
* updated dependencies

20130317
* added .gitignore

20130305
* changes in FAT date time

20130224
* updated dependencies
* 2013 update
* removed codegear files

20121021
* added timezone indicator format flag

20120920
* updated dependencies

20120701
* updated dependencies

20120630
* updated dependencies

20120522
* worked on floatingtime
* updated project site and email address
* added set to zero of unused date and time values

20120521
* added floatingtime

20120507
* updated dependencies

20120426
* fixes for pkg-config detection of libraries

20120422
* changed byte order to int
* added systemtime support

20120418
* fixes for with index functions

20120417
* worked on string with index functions
* worked on milli and nano seconds support
* API changes

20120415
* worked on string with index functions

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* updated dependencies
* updated msvscpp and borland files

20120318
* Worked on adding tests
* added NSF functions to API
* added microseconds support to NSF

20120317
* Worked on adding tests
* fix for missing formatting flag support
* added support for 64-bit versions of POSIX time

20120314
* Worked on adding tests
* addded POSIX functions to API
* updated man page
* updated README files

20120312
* updated dependencies
* added .rc file

20120102
* 2012 update

20111114
* code clean
* updated libcstring

20111031
* updated libcstring

20111013
* fix for posix time function
* updated common

20111007
* updated configure.ac and m4 scripts
* added POSIX time
* updates msvscpp and codegear files

20110723