@@ -30,8 +30,8 @@
 #include "libfdatetime_libcerror.h"
 #include "libfdatetime_types.h"
 
-/* Initialize a FAT date and time
- * Make sure the value fat_date_time is pointing to is set to NULL
+/* Creates a FAT date and time
+ * Make sure the value fat_date_time is referencing, is set to NULL
  * Returns 1 if successful or -1 on error
  */
 int libfdatetime_fat_date_time_initialize(
@@ -280,7 +280,7 @@ int libfdatetime_fat_date_time_copy_to_date_time_values(
 		 error,
 		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
 		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid internal fat date time.",
+		 "%s: invalid internal FAT date time.",
 		 function );
 
 		return( -1 );
@@ -330,7 +330,7 @@ int libfdatetime_fat_date_time_copy_to_date_time_values(
 	return( 1 );
 }
 
-/* Deterimes the size of the string for the fat date time
+/* Deterimes the size of the string for the FAT date time
  * The string size includes the end of string character
  * Returns 1 if successful or -1 on error
  */
@@ -343,6 +343,7 @@ int libfdatetime_fat_date_time_get_string_size(
 	libfdatetime_date_time_values_t date_time_values;
 
 	static char *function = "libfdatetime_fat_date_time_get_string_size";
+	int result            = 0;
 
 	if( fat_date_time == NULL )
 	{
@@ -350,7 +351,7 @@ int libfdatetime_fat_date_time_get_string_size(
 		 error,
 		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
 		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
-		 "%s: invalid fat date time.",
+		 "%s: invalid FAT date time.",
 		 function );
 
 		return( -1 );
@@ -380,13 +381,13 @@ int libfdatetime_fat_date_time_get_string_size(
 
 		return( -1 );
 	}
-	/* Create the date and time string
-	 */
-	if( libfdatetime_date_time_values_get_string_size(
-	     &date_time_values,
-	     string_size,
-	     string_format_flags,
-	     error ) != 1 )
+	result = libfdatetime_date_time_values_get_string_size(
+	          &date_time_values,
+	          string_size,
+	          string_format_flags,
+	          error );
+
+	if( result == -1 )
 	{
 		libcerror_error_set(
 		 error,
@@ -397,11 +398,10 @@ int libfdatetime_fat_date_time_get_string_size(
 
 		return( -1 );
 	}
-	/* Make sure the string can hold the hexadecimal representation
-	 * of a fat date time
-	 */
-	if( *string_size < 18 )
+	else if( result == 0 )
 	{
+		/* Make sure the string can hold the hexadecimal representation of the FAT date time
+		 */
 		*string_size = 18;
 	}
 	return( 1 );
