@@ -30,8 +30,8 @@
 #include "libfdatetime_libcerror.h"
 #include "libfdatetime_types.h"
 
-/* Initialize a filetime
- * Make sure the value filetime is pointing to is set to NULL
+/* Creates a filetime
+ * Make sure the value filetime is referencing, is set to NULL
  * Returns 1 if successful or -1 on error
  */
 int libfdatetime_filetime_initialize(
@@ -514,6 +514,7 @@ int libfdatetime_filetime_get_string_size(
 	libfdatetime_date_time_values_t date_time_values;
 
 	static char *function = "libfdatetime_filetime_get_string_size";
+	int result            = 0;
 
 	if( filetime == NULL )
 	{
@@ -551,13 +552,13 @@ int libfdatetime_filetime_get_string_size(
 
 		return( -1 );
 	}
-	/* Create the date and time string
-	 */
-	if( libfdatetime_date_time_values_get_string_size(
-	     &date_time_values,
-	     string_size,
-	     string_format_flags,
-	     error ) != 1 )
+	result = libfdatetime_date_time_values_get_string_size(
+	          &date_time_values,
+	          string_size,
+	          string_format_flags,
+	          error );
+
+	if( result == -1 )
 	{
 		libcerror_error_set(
 		 error,
@@ -568,11 +569,10 @@ int libfdatetime_filetime_get_string_size(
 
 		return( -1 );
 	}
-	/* Make sure the string can hold the hexadecimal representation
-	 * of a filetime
-	 */
-	if( *string_size < 24 )
+	else if( result == 0 )
 	{
+		/* Make sure the string can hold the hexadecimal representation of the filetime
+		 */
 		*string_size = 24;
 	}
 	return( 1 );
