@@ -30,8 +30,8 @@
 #include "libfdatetime_libcerror.h"
 #include "libfdatetime_types.h"
 
-/* Initialize a floatingtime
- * Make sure the value floatingtime is pointing to is set to NULL
+/* Creates a floatingtime
+ * Make sure the value floatingtime is referencing, is set to NULL
  * Returns 1 if successful or -1 on error
  */
 int libfdatetime_floatingtime_initialize(
@@ -462,6 +462,7 @@ int libfdatetime_floatingtime_get_string_size(
 	libfdatetime_date_time_values_t date_time_values;
 
 	static char *function = "libfdatetime_floatingtime_get_string_size";
+	int result            = 0;
 
 	if( floatingtime == NULL )
 	{
@@ -499,13 +500,13 @@ int libfdatetime_floatingtime_get_string_size(
 
 		return( -1 );
 	}
-	/* Create the date and time string
-	 */
-	if( libfdatetime_date_time_values_get_string_size(
-	     &date_time_values,
-	     string_size,
-	     string_format_flags,
-	     error ) != 1 )
+	result = libfdatetime_date_time_values_get_string_size(
+	          &date_time_values,
+	          string_size,
+	          string_format_flags,
+	          error );
+
+	if( result == -1 )
 	{
 		libcerror_error_set(
 		 error,
@@ -516,11 +517,10 @@ int libfdatetime_floatingtime_get_string_size(
 
 		return( -1 );
 	}
-	/* Make sure the string can hold the hexadecimal representation
-	 * of a floatingtime
-	 */
-	if( *string_size < 21 )
+	else if( result == 0 )
 	{
+		/* Make sure the string can hold the hexadecimal representation of the floatingtime
+		 */
 		*string_size = 21;
 	}
 	return( 1 );
